<resources>
    <string name="app_name">DigiArt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="actvity_main">MainActivity</string>
    <string name="title_search">Search</string>
    <string name="title_sell">Sell</string>
    <string name="actvity_login">LoginActivity</string>
    <string name="actvity_sell_art">SellArtCategoryActivity</string>
    <string name="selling_selection_lbl">Start selling now</string>
    <string name="digital_illustration_lbl">Digital Illustration</string>
    <string name="digital_painting_lbl">Digital Painting</string>
    <string name="vector_art_lbl">Vector Art</string>
    <string name="_3d_art_lbl">3D Art</string>
    <string name="pixel_art_lbl">Pixel Art</string>
    <string name="digital_collage_lbl">Digital Collage</string>
    <string name="digital_photograh_lbl">Digital Photograh</string>
    <string name="digital_comic_lbl">Digital Comic</string>
    <string name="nft_art_lbl">NFT Art</string>
    <string name="generative_art_lbl">Generative Art</string>
    <string name="motion_grahpics_and_animation_lbl">Motion Graphics and Animation</string>
    <string name="digital_calligraphy_and_lettering_lbl">Digital Calligraphy and Lettering</string>
    <string name="digiart_logo_2_white">digiart_logo_2_white</string>
    <string name="guest_login_option">Continue as Guest</string>
    <string name="create_account_prompt">Create Account</string>
    <string name="email_hint">Email</string>
    <string name="login_signup_hero_img">hero_img</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_with_email_option">Sign in with email</string>
    <string name="google_signin_option">Sign in with Google</string>
    <string name="con_password">Confirm Password</string>
    <string name="login_option">Login to Account</string>
    <string name="google_signup_option">Sign up with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="email_required">Email required</string>
    <string name="password_required">Password required</string>
    <string name="confirm_password_required">Confirm password required</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Account Settings -->
    <string name="account_settings_header">Account Settings</string>
    <string name="user_name_title">User Name</string>
    <string name="email_notifications_title">Email Notifications</string>
    <string name="email_notifications_summary_on">Email notifications are enabled</string>
    <string name="email_notifications_summary_off">Email notifications are disabled</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_password_summary">Change your account password</string>

    <!-- Notification Settings -->
    <string name="notification_settings_header">Notification Settings</string>
    <string name="push_notifications_title">Push Notifications</string>
    <string name="push_notifications_summary_on">Push notifications are enabled</string>
    <string name="push_notifications_summary_off">Push notifications are disabled</string>
    <string name="notification_sound_title">Notification Sound</string>

    <!-- Security Settings -->
    <string name="security_settings_header">Security Settings</string>
    <string name="biometric_authentication_title">Biometric Authentication</string>
    <string name="biometric_authentication_summary_on">Biometric authentication is enabled</string>
    <string name="biometric_authentication_summary_off">Biometric authentication is disabled</string>
    <string name="two_factor_authentication_title">Two-Factor Authentication</string>
    <string name="two_factor_authentication_summary_on">Two-factor authentication is enabled</string>
    <string name="two_factor_authentication_summary_off">Two-factor authentication is disabled</string>

    <!-- Display Settings -->
    <string name="display_settings_header">Display Settings</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="dark_mode_summary_on">Dark mode is enabled</string>
    <string name="dark_mode_summary_off">Dark mode is disabled</string>
    <string name="font_size_title">Font Size</string>
    <string name="log_out_title">Logout</string>
    <string name="log_out_summary">Logout of your current account</string>
    <string name="_10"><![CDATA[< $10]]></string>
    <string name="_10_25">$10 - $25</string>
    <string name="_25_50">$25 - $50</string>
    <string name="_50_100">$50 - $100</string>
    <string name="_100"><![CDATA[> $100]]></string>
    <string name="art_type">Art Type</string>
    <string name="price">Price</string>
    <string name="filter_icon_description">Filter icon</string>
    <string name="filter">Filter</string>
    <string name="img_type">Image Type</string>
    <string name="All">All</string>
    <string name="Photo">Photo</string>
    <string name="Illustration">Illustration</string>
    <string name="profile_listings">Listings</string>
    <string name="profile_saved">Saved</string>
    <string name="title_activity_sell">Sell</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_a_digital_art_type_for_your_listing">Select a digital art type for your listing</string>
    <string name="next">Next</string>
    <string name="confirm_listing_details">Confirm listing details</string>
    <string name="setup_listing_details">Setup listing details</string>
    <string name="product_name">Listing Name</string>
    <string name="product_tag_tags">Tag/Tags</string>
    <string name="description">Description</string>
    <string name="upload_your_digital_art">Upload your Digital Art</string>
    <string name="preview_listing">Listing Preview</string>
    <string name="set_listing_details_image">Set listing details image</string>
    <string name="back">Back</string>
    <string name="listing_preview_image">Listing preview image</string>
    <string name="ditital_art_type">Ditital Art Type</string>
    <string name="title_sell_preview">Listing Preview</string>
    <string name="title_sell_details">Setup Listing Details</string>
    <string name="default_web_client_id">510340398446-reb1mdq66mo14q21md0m90nrtejd4lj0.apps.googleusercontent.com</string>
</resources>