<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/account_settings_header">


        <!-- Email Notifications -->
        <SwitchPreferenceCompat
            app:key="email_notifications"
            app:title="@string/email_notifications_title"
            app:summaryOn="@string/email_notifications_summary_on"
            app:summaryOff="@string/email_notifications_summary_off" />

        <!-- Change Password -->
        <Preference
            app:key="change_password"
            app:title="@string/change_password_title"
            app:icon="@drawable/password_reset_icon"
            app:summary="@string/change_password_summary" />

        <!-- Log Out -->
        <Preference
            app:key="log_out"
            app:title="@string/log_out_title"
            app:icon="@drawable/logout_icon"
            app:summary="@string/log_out_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_settings_header">

        <!-- Push Notifications -->
        <SwitchPreferenceCompat
            app:key="push_notifications"
            app:title="@string/push_notifications_title"
            app:summaryOn="@string/push_notifications_summary_on"
            app:summaryOff="@string/push_notifications_summary_off" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_settings_header">

        <!-- Biometric Authentication -->
        <SwitchPreferenceCompat
            app:key="biometric_authentication"
            app:title="@string/biometric_authentication_title"
            app:summaryOn="@string/biometric_authentication_summary_on"
            app:summaryOff="@string/biometric_authentication_summary_off" />

        <!-- Two-Factor Authentication -->
        <SwitchPreferenceCompat
            app:key="two_factor_authentication"
            app:title="@string/two_factor_authentication_title"
            app:summaryOn="@string/two_factor_authentication_summary_on"
            app:summaryOff="@string/two_factor_authentication_summary_off" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_settings_header">

        <!-- Dark Mode -->
        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode_title"
            app:summaryOn="@string/dark_mode_summary_on"
            app:summaryOff="@string/dark_mode_summary_off" />

        <!-- Font Size -->
        <ListPreference
            app:key="font_size"
            app:title="@string/font_size_title"
            app:entries="@array/font_size_entries"
            app:entryValues="@array/font_size_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
